--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href=".css" />
+		<link rel="stylesheet" href="/style.css" />
 		<title>PacMan</title>
 	</head>
 	<body>
-		<h1>PacMan</h1>
+		<h3>Score:<span id="score"></span></h3>
+		<div class="grid"></div>
 		<script src="/script.js"></script>
 	</body>
 </html>
